--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Template 3</title>
-<meta name="description" content="A description of your website">
+<meta name="description" content="SaleWell Nepal">
 <meta name="keywords" content="keyword1, keyword2, keyword3">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -26,10 +26,10 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Email</a></li>
-        <li><a href="#">New Page 1</a></li>
-        <li><a href="#">New Page 2</a></li>
-        <li><a href="#">New Page 3</a></li>
-        <li><a href="#">New Page 4</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Location</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Profile</a></li>
       </ul>
     </div>
 
@@ -41,13 +41,13 @@
         <h1>Main Menu</h1>
         <div class="box">
           <ul>
-            <li><a href="#">Menu Item 1</a></li>
-            <li><a href="#">Menu Item 2</a></li>
-            <li><a href="#">Menu Item 3</a></li>
-            <li><a href="#">Menu Item 4</a></li>
-            <li><a href="#">Menu Item 5</a></li>
-            <li><a href="#">Menu Item 6</a></li>
-            <li><a href="#">Menu Item 7</a></li>
+            <li><a href="#">Television</a></li>
+            <li><a href="#">Fashion</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Bags</a></li>
+            <li><a href="#">Mobile</a></li>
+            <li><a href="#">Electronics</a></li>
+            <li><a href="#">Decors</a></li>
           </ul>
         </div>
       </div>
