--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div id="header"> 
 
     <div class="top_banner">
-      <h1>Enter Site Title</h1>
-      <p>Enter Site Slogan</p>
+      <h1>SaleWell Nepal</h1>
+      <p>Sale at your doorbell</p>
     </div>
 
   </div>
