--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Template 3</title>
+<title>Salewell Nepal</title>
 <meta name="description" content="SaleWell Nepal">
 <meta name="keywords" content="keyword1, keyword2, keyword3">
 <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -57,9 +57,7 @@
         <div class="box">
           <p>Enter Block content here...</p>
           <br>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-Aenean commodo Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
- Aenean commodo</p>
+          <p>Salewell Nepal helps you to buy products from your home. If you want to buy any electronics product at resonable price than you can contact :).</p>
         </div>
       </div>
 
