--- a/index.html
+++ b/index.html
@@ -67,36 +67,17 @@
       <div class="common_content">
         <h2>Gallery</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetuer 
-adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum 
-sociis natoque penatibus et magnis dis parturient montes, nascetur 
-ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
- quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla
- vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, 
-imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis 
-pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
- Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, 
-consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, 
-viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius
- laoreet. Quisque rutrum. Aenean imperdiet.</p>
+        <p>Salewell Nepal helps you to buy products from your home. If you want to buy any electronics product at resonable price than you can contact :)..</p>
         </div>
       <div class="top_content">
         <div class="column_one">
           <h2>Subscription</h2>
-          <p>Etiam ultricies nisi vel augue. Curabitur ullamcorper 
-ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus 
-eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing 
-sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, 
-hendrerit id, lorem. Maecenas nec odio et ant</p>
+          <p>Salewell Nepal helps you to buy products from your home. If you want to buy any electronics product at resonable price than you can contact :).</p>
           <br>
           <p><a class="btn" href="#">Read more</a></p></div>
         <div class="column_two border_left">
           <h2>Other Services</h2>
-          <p>Etiam ultricies nisi vel augue. Curabitur ullamcorper 
-ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus 
-eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing 
-sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, 
-hendrerit id, lorem. Maecenas nec odio et ant</p>
+          <p>Salewell Nepal helps you to buy products from your home. If you want to buy any electronics product at resonable price than you can contact :).</p>
           <br>
           <p><a class="btn" href="#">Read more</a></p></div>
       </div>
